2008-02-07  Julian Graham  <joolean@gmail.com>

	* throw.c (make_jmpbuf): Don't enter critical section during thread
	spawn -- there is a possibility of deadlock if other threads are
	exiting.
	
2008-02-06  Neil Jerram  <neil@ossau.uklinux.net>

	* gc-malloc.c (scm_gc_malloc): Return NULL if requested size is 0.
	(scm_gc_free): Don't call `free' if mem is NULL.

2008-02-06  Ludovic Courtès  <ludo@gnu.org>

	* numbers.c (scm_i_mkbig, scm_i_long2big, scm_i_ulong2big,
	scm_i_clonebig, scm_i_bigcmp, scm_i_dbl2big, scm_i_dbl2num,
	scm_i_normbig): Remove `SCM_C_INLINE_KEYWORD' since these are
	declared as `extern' in `numbers.h'.  This precluded compilation
	on Solaris 9 with Sun CC (reported by David Halik
	<dhalik@nbcs.rutgers.edu>).

2008-02-05  Neil Jerram  <neil@ossau.uklinux.net>

	* fports.c (fport_seek): Make dependent on GUILE_USE_64_CALLS.

	* _scm.h: Make definition of CHOOSE_LARGEFILE depend on
	GUILE_USE_64_CALLS.

2008-02-01  Neil Jerram  <neil@ossau.uklinux.net>

	* modules.c (the_root_module): Moved before scm_current_module.
	(scm_current_module): Return the root module if `the-module' fluid
	gives #f.

2008-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* COPYING: Removed.

	* __scm.h, _scm.h, weaks.c: Update copyright statement to LGPL.

2008-01-18  Neil Jerram  <neil@ossau.uklinux.net>

	* hashtab.c (scm_hash_fn_create_handle_x): If supplied assoc_fn
	returns neither a pair nor #f, signal a wrong-type-arg error.
	(Thanks to Gregory Marton for reporting this.)

2007-12-29  Neil Jerram  <neil@ossau.uklinux.net>

	* gc.c (mark_gc_async): Change "func_data" to "fn_data", to avoid
	clash with AIX header file.
	* hooks.c (scm_c_hook_add, scm_c_hook_remove): Same again.
	* hooks.h (scm_t_c_hook_function, scm_c_hook_add,
	scm_c_hook_remove): Same again.

2007-12-08  Ludovic Courtès  <ludo@gnu.org>

	* __scm.h (SCM_EXPECT, SCM_LIKELY, SCM_UNLIKELY): New macros.
	(SCM_ASSERT, SCM_ASSERT_TYPE, SCM_ASRTGO, SCM_GASSERT0,