@@ -20,7 +20,7 @@ called with an associator proc that returns neither a pair nor #f.
 ** Secondary threads now always return a valid module for (current-module).
 ** Avoid MacOS build problems caused by incorrect combination of "64"
 system and library calls.
-** Fixed compilation of `numbers.c' with Sun Studio (Solaris 9)
+** Fixed build with Sun Studio (Solaris 9)
 ** Fixed wrong-type-arg errors when creating zero length SRFI-4
 uniform vectors on AIX.
 ** Fixed a deadlock that occurs upon GC with multiple threads.
